--- a/skins/scmRed/skin.css
+++ b/skins/scmRed/skin.css
@@ -1,4 +1,4 @@
-#player,#player a{ color:#931313; }
+#player,#player a{ color:#c31134; }
 #player{ background:url(sizerAndVol.png); background-position: bottom !important; background-repeat: repeat-x !important; }
 #player .mainImage{ background:url(main.png); }
 
